# dlis_builder

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: publish.sh
src/dlis_builder/: __init__.py  __main__.py  _writer.py  builder.py
src/dlis_builder/contracts/: __init__.py  converter.py  source.py
src/dlis_builder/converters/: __init__.py  csv.py  las.py
src/dlis_builder/models/: __init__.py  channel.py  frame.py  metadata.py
src/dlis_builder/utils/: __init__.py  naming.py  units.py  validation.py
tests/: _debug2.py  _debug_las.py  _smoke.py  conftest.py  test_builder.py  test_csv_converter.py  test_las_converter.py
